Render layer pass bug #41408

Closed
opened 2014-08-11 22:20:36 +02:00 by Alexey · 13 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (2.67(r56533) and later)
Worked: (2.66(r54697)) and earlier

Short description of error
this bug arppeared in 2.67 with new function(render layers, pass)render_layers_2.67.png
in 2.66 was not this
Pass_bug2.66.png
if we select a render layer panel, passes context menu, and switch off combined pass - we will receive render result on other passes without textures
this bug only in BI(not cycles)
and else: if we switch off a combined, but switch on color - working properly
type of texture - is not important

Exact steps for others to reproduce the error
open this{F102495}
1)Render, and see on speq and diffuse pass result
2)switch off a combined pass, render, see on speq and diffuse pass(we will see difference,render without texture,then used on diffuse color and speqular color)
3)switch on a color pass and render again - we will see proper result.

**System Information** windows7 64 ASUS ATI Radeon HD6870 **Blender Version** Broken: (2.67(r56533) and later) Worked: (2.66(r54697)) and earlier **Short description of error** this bug arppeared in 2.67 with new function(render layers, pass)![render_layers_2.67.png](https://archive.blender.org/developer/F102496/render_layers_2.67.png) in 2.66 was not this ![Pass_bug2.66.png](https://archive.blender.org/developer/F102492/Pass_bug2.66.png) if we select a render layer panel, passes context menu, and switch off combined pass - we will receive render result on other passes without textures this bug only in BI(not cycles) and else: if we switch off a combined, but switch on color - working properly type of texture - is not important **Exact steps for others to reproduce the error** open this{[F102495](https://archive.blender.org/developer/F102495/Passes_bug.blend)} 1)Render, and see on speq and diffuse pass result 2)switch off a combined pass, render, see on speq and diffuse pass(we will see difference,render without texture,then used on diffuse color and speqular color) 3)switch on a color pass and render again - we will see proper result.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Alexey self-assigned this 2014-08-11 22:20:36 +02:00
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Alexey was unassigned by Bastien Montagne 2014-08-11 22:24:51 +02:00

This issue was referenced by d425cb06f6

This issue was referenced by d425cb06f691a573239e1f31c3394f22cbf6cdd6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d425cb06f6.

Closed by commit d425cb06f6.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @Sergey

Added subscriber: @Sergey

Using Mapping from the texture panel indeed is still not handled correct. Will have a closer look.

Using Mapping from the texture panel indeed is still not handled correct. Will have a closer look.
Sergey Sharybin self-assigned this 2014-08-12 16:39:56 +02:00
Author

And else, look on this{F102645}
Try to render and select diffuse pass result(maybe withiut switching off combined pass)
in render, on diffuse pass ignored all node correction on material(maybe without textures).

And else, look on this{[F102645](https://archive.blender.org/developer/F102645/mat_node_without_texture.blend)} Try to render and select diffuse pass result(maybe withiut switching off combined pass) in render, on diffuse pass ignored all node correction on material(maybe without textures).

This issue was referenced by be755f3873

This issue was referenced by be755f387336a0066baa0919b49e58ffc63607b1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit be755f3873.

Closed by commit be755f3873.

Seems the passes which might be made to work relatively simple are supported now. Refraction pass had some strange behavior, but root of the issue lies deep in the render code it seems. Would rather consider it a TODO for now.

Seems the passes which might be made to work relatively simple are supported now. Refraction pass had some strange behavior, but root of the issue lies deep in the render code it seems. Would rather consider it a TODO for now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41408
No description provided.