Fix T41408: Diffuse and specular passes were incorrect with combined/color passes disabled